cmake_minimum_required(VERSION 3.0)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED on)

################################################################################
add_executable(LT_and_ET01 LT_and_ET01.c)
add_executable(LT_and_ET02 LT_and_ET02.c)
add_executable(LT_and_ET03 LT_and_ET03.c)
