cmake_minimum_required(VERSION 3.5)

add_executable(dg_client_broadcast         dg_client_broadcast.c)
add_executable(dg_client_broadcast_pselect dg_client_broadcast_pselect.c)
add_executable(dg_client_broadcast_setjmp  dg_client_broadcast_setjmp.c)
add_executable(dg_client_broadcast_ipc     dg_client_broadcast_ipc.c)
